# crepe.cpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
crepe-model/: model.onnx  model.ort  model.required_operators_and_types.config  model.required_operators_and_types.with_runtime_opt.config  model.with_runtime_opt.ort
scripts/: build-mac.sh  build-wasm.sh  convert-model-to-ort.sh  requirements.txt
src/: CMakeLists.txt  crepe.hpp  inference.cpp  main.cpp  wavloader.cpp  wavloader.h
src-cli/: CMakeLists.txt  crepe.cpp
src-test/: CMakeLists.txt  crepe.cpp
src-wasm/: CMakeLists.txt  crepe.cpp
web/: app.js  crepe_wasm.js  crepe_wasm.wasm  index.html  thread.js
